--- a/index.html
+++ b/index.html
@@ -1,1 +1,155 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Spotify Premium - Spotify (SE)</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+</head>
+<body>
+    <div class="container-premium">
+    <header class="header-premium">
+        <img src="" alt="Spotify-logo">
+        <nav>
+            <section class="links-navtop-premium">  
+                <a href="#">Premium</a>
+                <a href="#">Support</a>
+                <a href="#">Ladda ned</a>
+                <a href="">|</a>
+                <a href="#">Registera dig</a>
+                <a href="#">Logga in</a>
+            </section>
+        </nav>
+    </header>
+    <main class="main-premium">
+        <h1>Få premium grais i en månad</h1>
+        <p>Därefter endast 109,00kr/månad. Avsluta när som helst.</p>
+        <aside class="btn-wrapper-premium">
+            <button>Kom igång</button>
+            <button>Visa planer</button>
+        </aside>
+        <p><strong>Villkor gäller.</strong> Erbjudandet på en månad gratis är inte tillgängligt för användare som redan testat Premium.</p>
 
+    </main>
+    <section class="whyus-premium">
+        <h1>Varför skaffa Premium?</h1>
+        <article class="benefits-whyus-premium">
+            <i class="fa-solid fa-music"></i>
+            <h2>Ladda ned musik.</h2>
+            <p>Lyssnar var som helst.</p>
+        </article>
+        <article class="benefits-whyus-premium">
+            <i class="fa-solid fa-music"></i>
+            <h2>Inga reklamavbrott.</h2>
+            <p>Njut av musik utan avbrott.</p>
+        </article>
+        <article class="benefits-whyus-premium">
+            <i class="fa-solid fa-music"></i>
+            <h2>Lyssna på valfri låt.</h2>
+            <p>Även på mobilen.</p>
+        </article>
+        <article class="benefits-whyus-premium">
+            <i class="fa-solid fa-music"></i>
+            <h2>Byt låt så ofta du vill.</h2>
+            <p>Tryck bara på Nästa.</p>
+        </article>
+    </section>
+    <section class="offers-premium">
+        <h1>Välj ditt Premium</h1>
+        <p>Lyssna utan gränser på din telefon, på dina högtalare och på andra enheter.</p>
+        <div class="wrapper-offers-premium">
+            <article class="cards individual-offer">
+                <a href="">En månad gratis</a>
+                <h4>Individual</h4>
+                <p>109,00 kr/månad efter erbjudandeperioden</p>
+                <p>1 konto</p>
+                <p><i class="fa-solid fa-check"></i> Lyssna på musik utan reklam</p>
+                <p><i class="fa-solid fa-check"></i> Spela var som helst – även offline</p>
+                <p><i class="fa-solid fa-check"></i> Uppspelning on demand</p>
+                <button class="btn-offers-premium">Kom igång</button>
+                <p><strong>Villkor gäller.</strong> Erbjudandet på en månad gratis är inte tillgängligt för användare som redan har testat Premium.</p>
+            </article>
+            <article class="cards duo-offer">
+                <a href="">En månad gratis</a>
+                <h4>Duo</h4>
+                <p>149,00 kr/månad efter erbjudandeperioden</p>
+                <p>2 konton</p>
+                <p><i class="fa-solid fa-check"></i> 2 Premium-konton för par som bor ihop</p>
+                <p><i class="fa-solid fa-check"></i> Duo Mix: en spellista för två som uppdateras regelbundet med musik ni båda gillar</p>
+                <p><i class="fa-solid fa-check"></i> Uppspelning on demand</p>
+                <button class="btn-offers-premium">Kom igång</button>
+                <p><strong>Villkor gäller.</strong> Reklamfri lyssning på musik, uppspelning offline och on demand</p>
+            </article>
+            <article class="cards family-offer">
+                <a href="">En månad gratis</a>
+                <h4>Family</h4>
+                <p>189,00 kr/månad efter erbjudandeperioden</p>
+                <p>Upp till 6 konton</p>
+                <p><i class="fa-solid fa-check"></i> 6 Premium-konton för familjemedlemmar under samma tak</p>
+                <p><i class="fa-solid fa-check"></i> Family Mix: en spellista för din familj som uppdateras regelbundet med musik som alla gillar</p>
+                <p><i class="fa-solid fa-check"></i> Blockera explicit musik</p>
+                <p><i class="fa-solid fa-check"></i> Reklamfri lyssning på musik, uppspelning offline och on demand</p>
+                <p><i class="fa-solid fa-check"></i> Spotify Kids: en särskild app för barn</p>
+                <button class="btn-offers-premium">Kom igång</button>
+                <p><strong>Villkor gäller.</strong> Erbjudandet på en månad gratis är inte tillgängligt för användare som redan har testat Premium.</p>
+            </article>
+            <article class="cards student-offer">
+                <a href="">En månad gratis</a>
+                <h4>Student</h4>
+                <p>65,00 kr/månad efter erbjudandeperioden</p>
+                <p>1 konto</p>
+                <p><i class="fa-solid fa-check"></i> Specialrabatter för berättigade studenter vid universitet eller högskola</p>
+                <p><i class="fa-solid fa-check"></i> Spela var som helst – även offline</p>
+                <p><i class="fa-solid fa-check"></i> Uppspelning on demand</p>
+                <button class="btn-offers-premium">Kom igång</button>
+                <p><strong>Villkor gäller.</strong> Erbjudandet på en månad gratis är inte tillgängligt för användare som redan har testat Premium.</p>
+                <h2>Andra sätt att skaffa Premium på</h2>
+                <article class="cards-footer-premium">
+                    <h4>Individual + Headspace</h4>
+                    <button class="btn-footer-premium">Läs mer</button>
+                </article>
+            </article>
+        </div>
+    </section>
+    <footer>
+        <img src="" alt="Spotify-logo">
+        <article class="company-footer-premium">
+        <h4>Företaget</h4>
+        <a href="#">Om</a>
+        <a href="#">Jobb</a>
+        <a href="#">For the Record</a>
+        </article>
+        
+        <article class="company-footer-premium">
+            <h4>Företaget</h4>
+            <a href="#">Om</a>
+            <a href="#">Jobb</a>
+            <a href="#">For the Record</a>
+        </article>
+
+        <article class="communities-footer-premium">
+            <h4>Communities</h4>
+            <a href="#">För artister</a>
+            <a href="#">Utvecklare</a>
+            <a href="#">Annonsering</a>
+            <a href="#">Investerare</a>
+            <a href="#">Försäljare</a>
+        </article>
+
+        <article class="useablelinks-footer-premium">
+            <h4>Användbara länkar</h4>
+            <a href="#">Support</a>
+            <a href="#">Webbspelaren</a>
+            <a href="#">Gratis mobilapp</a>
+        </article>
+        <article class="socialmedialinks-footer-premium">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+        </article>
+
+    </footer>
+    </div>
+</body>
+</html>
