Fixed icons for notes and check in index.html

--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
     <section class="whyus-premium">
         <h1>Varför skaffa Premium?</h1>
         <article class="benefits-whyus-premium">
-            <i class="fa-solid fa-music"></i>
+            <i class="fab fa-itunes-note"></i>
             <h2>Ladda ned musik.</h2>
             <p>Lyssnar var som helst.</p>
         </article>
         <article class="benefits-whyus-premium">
-            <i class="fa-solid fa-music"></i>
+            <i class="fab fa-itunes-note"></i>
             <h2>Inga reklamavbrott.</h2>
             <p>Njut av musik utan avbrott.</p>
         </article>
         <article class="benefits-whyus-premium">
-            <i class="fa-solid fa-music"></i>
+            <i class="fab fa-itunes-note"></i>
             <h2>Lyssna på valfri låt.</h2>
             <p>Även på mobilen.</p>
         </article>
         <article class="benefits-whyus-premium">
-            <i class="fa-solid fa-music"></i>
+            <i class="fab fa-itunes-note"></i>
             <h2>Byt låt så ofta du vill.</h2>
             <p>Tryck bara på Nästa.</p>
         </article>
@@ -64,9 +64,9 @@
                 <h4>Individual</h4>
                 <p>109,00 kr/månad efter erbjudandeperioden</p>
                 <p>1 konto</p>
-                <p><i class="fa-solid fa-check"></i> Lyssna på musik utan reklam</p>
-                <p><i class="fa-solid fa-check"></i> Spela var som helst – även offline</p>
-                <p><i class="fa-solid fa-check"></i> Uppspelning on demand</p>
+                <p><i class="fas fa-check"></i> Lyssna på musik utan reklam</p>
+                <p><i class="fas fa-check"></i> Spela var som helst – även offline</p>
+                <p><i class="fas fa-check"></i> Uppspelning on demand</p>
                 <button class="btn-offers-premium">Kom igång</button>
                 <p><strong>Villkor gäller.</strong> Erbjudandet på en månad gratis är inte tillgängligt för användare som redan har testat Premium.</p>
             </article>
@@ -75,9 +75,9 @@
                 <h4>Duo</h4>
                 <p>149,00 kr/månad efter erbjudandeperioden</p>
                 <p>2 konton</p>
-                <p><i class="fa-solid fa-check"></i> 2 Premium-konton för par som bor ihop</p>
-                <p><i class="fa-solid fa-check"></i> Duo Mix: en spellista för två som uppdateras regelbundet med musik ni båda gillar</p>
-                <p><i class="fa-solid fa-check"></i> Uppspelning on demand</p>
+                <p><i class="fas fa-check"></i> 2 Premium-konton för par som bor ihop</p>
+                <p><i class="fas fa-check"></i> Duo Mix: en spellista för två som uppdateras regelbundet med musik ni båda gillar</p>
+                <p><i class="fas fa-check"></i> Uppspelning on demand</p>
                 <button class="btn-offers-premium">Kom igång</button>
                 <p><strong>Villkor gäller.</strong> Reklamfri lyssning på musik, uppspelning offline och on demand</p>
             </article>
@@ -86,11 +86,11 @@
                 <h4>Family</h4>
                 <p>189,00 kr/månad efter erbjudandeperioden</p>
                 <p>Upp till 6 konton</p>
-                <p><i class="fa-solid fa-check"></i> 6 Premium-konton för familjemedlemmar under samma tak</p>
-                <p><i class="fa-solid fa-check"></i> Family Mix: en spellista för din familj som uppdateras regelbundet med musik som alla gillar</p>
-                <p><i class="fa-solid fa-check"></i> Blockera explicit musik</p>
-                <p><i class="fa-solid fa-check"></i> Reklamfri lyssning på musik, uppspelning offline och on demand</p>
-                <p><i class="fa-solid fa-check"></i> Spotify Kids: en särskild app för barn</p>
+                <p><i class="fas fa-check"></i> 6 Premium-konton för familjemedlemmar under samma tak</p>
+                <p><i class="fas fa-check"></i> Family Mix: en spellista för din familj som uppdateras regelbundet med musik som alla gillar</p>
+                <p><i class="fas fa-check"></i> Blockera explicit musik</p>
+                <p><i class="fas fa-check"></i> Reklamfri lyssning på musik, uppspelning offline och on demand</p>
+                <p><i class="fas fa-check"></i> Spotify Kids: en särskild app för barn</p>
                 <button class="btn-offers-premium">Kom igång</button>
                 <p><strong>Villkor gäller.</strong> Erbjudandet på en månad gratis är inte tillgängligt för användare som redan har testat Premium.</p>
             </article>
@@ -99,9 +99,9 @@
                 <h4>Student</h4>
                 <p>65,00 kr/månad efter erbjudandeperioden</p>
                 <p>1 konto</p>
-                <p><i class="fa-solid fa-check"></i> Specialrabatter för berättigade studenter vid universitet eller högskola</p>
-                <p><i class="fa-solid fa-check"></i> Spela var som helst – även offline</p>
-                <p><i class="fa-solid fa-check"></i> Uppspelning on demand</p>
+                <p><i class="fas fa-check"></i> Specialrabatter för berättigade studenter vid universitet eller högskola</p>
+                <p><i class="fas fa-check"></i> Spela var som helst – även offline</p>
+                <p><i class="fas fa-check"></i> Uppspelning on demand</p>
                 <button class="btn-offers-premium">Kom igång</button>
                 <p><strong>Villkor gäller.</strong> Erbjudandet på en månad gratis är inte tillgängligt för användare som redan har testat Premium.</p>
                 <h2>Andra sätt att skaffa Premium på</h2>
