Added Spotify-logo to header and footer, and added basic css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <div class="container-premium">
     <header class="header-premium">
-        <img src="" alt="Spotify-logo">
+        <aside class="logo-spotify-premium">
+            <i class="fab fa-spotify"></i>
+            <h2>Spotify</h2>
+        </aside>
         <nav>
             <section class="links-navtop-premium">  
                 <a href="#">Premium</a>
@@ -113,7 +116,10 @@
         </div>
     </section>
     <footer>
-        <img src="" alt="Spotify-logo">
+        <aside class="logo-spotify-premium">
+            <i class="fab fa-spotify"></i>
+            <h2>Spotify</h2>
+        </aside>
         <article class="company-footer-premium">
         <h4>Företaget</h4>
         <a href="#">Om</a>
