Fixed navbar and start of main section in css

--- a/index.html
+++ b/index.html
@@ -14,19 +14,17 @@
             <i class="fab fa-spotify"></i>
             <h2>Spotify</h2>
         </aside>
-        <nav>
-            <section class="links-navtop-premium">  
-                <a href="#">Premium</a>
-                <a href="#">Support</a>
-                <a href="#">Ladda ned</a>
-                <a href="">|</a>
-                <a href="#">Registera dig</a>
-                <a href="#">Logga in</a>
-            </section>
+        <nav class="links-navtop-premium">
+            <a href="#">Premium</a>
+            <a href="#">Support</a>
+            <a href="#">Ladda ned</a>
+            <a href="">|</a>
+            <a href="#">Registera dig</a>
+            <a href="#">Logga in</a>
         </nav>
     </header>
     <main class="main-premium">
-        <h1>Få premium grais i en månad</h1>
+        <h1>Få premium gratis i en månad</h1>
         <p>Därefter endast 109,00kr/månad. Avsluta när som helst.</p>
         <aside class="btn-wrapper-premium">
             <button>Kom igång</button>
