Added some styling for sections

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </main>
     <section class="whyus-premium">
         <h1>Varför skaffa Premium?</h1>
+        <div class="wrapper-whyus">
         <article class="benefits-whyus-premium">
             <i class="fab fa-itunes-note"></i>
             <h2>Ladda ned musik.</h2>
@@ -55,6 +56,7 @@
             <h2>Byt låt så ofta du vill.</h2>
             <p>Tryck bara på Nästa.</p>
         </article>
+    </div>
     </section>
     <section class="offers-premium">
         <h1>Välj ditt Premium</h1>
@@ -105,34 +107,29 @@
                 <p><i class="fas fa-check"></i> Uppspelning on demand</p>
                 <button class="btn-offers-premium">Kom igång</button>
                 <p><strong>Villkor gäller.</strong> Erbjudandet på en månad gratis är inte tillgängligt för användare som redan har testat Premium.</p>
-                <h2>Andra sätt att skaffa Premium på</h2>
+            </article>
+        </div>
+        <div class="wrapper-footer-premium">
+            <h2>Andra sätt att skaffa Premium på</h2>
                 <article class="cards-footer-premium">
                     <h4>Individual + Headspace</h4>
                     <button class="btn-footer-premium">Läs mer</button>
                 </article>
-            </article>
-        </div>
+            </div>
     </section>
     <footer>
         <aside class="logo-spotify-premium">
             <i class="fab fa-spotify"></i>
             <h2>Spotify</h2>
         </aside>
-        <article class="company-footer-premium">
+        <article class="links-footer-premium">
         <h4>Företaget</h4>
         <a href="#">Om</a>
         <a href="#">Jobb</a>
         <a href="#">For the Record</a>
         </article>
-        
-        <article class="company-footer-premium">
-            <h4>Företaget</h4>
-            <a href="#">Om</a>
-            <a href="#">Jobb</a>
-            <a href="#">For the Record</a>
-        </article>
 
-        <article class="communities-footer-premium">
+        <article class="links-footer-premium">
             <h4>Communities</h4>
             <a href="#">För artister</a>
             <a href="#">Utvecklare</a>
@@ -141,7 +138,7 @@
             <a href="#">Försäljare</a>
         </article>
 
-        <article class="useablelinks-footer-premium">
+        <article class="links-footer-premium">
             <h4>Användbara länkar</h4>
             <a href="#">Support</a>
             <a href="#">Webbspelaren</a>
